--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "seed-database": "node database/index.js"
   },
   "dependencies": {
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
