--- a/package.json
+++ b/package.json
@@ -10,22 +10,34 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "seed-database": "node database/index.js"
+    "seed-database": "node database/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "dependencies": {
     "express": "^4.15.0",
+    "jest-cli": "^25.1.0",
     "jquery": "^3.1.1",
+    "moment": "^2.24.0",
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "moment": "^2.24.0"
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.8.3",
     "babel-core": "^6.23.1",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.1",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^25.1.0",
+    "react-test-renderer": "^15.6.2",
     "webpack": "^2.2.1",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "@babel/preset-react": "^7.8.3"
   }
 }
