seeding script seperated from database index.js, and server route for /houses created to get house data

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "seed-database": "node database/index.js",
+    "seed-database": "node database/seedingScript.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
