--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
 "env": {
     "test": {
       "presets": ["@babel/preset-env", "@babel/preset-react"],
-      "plugins": ["transform-export-extensions"]
+      "plugins": ["transform-export-extensions", "babel-plugin-styled-components"]
     }
   }
 }
