--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^4.9.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "styled-components": "^3.4.10"
+    "styled-components": "^3.4.10",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.3",
