--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "styled-components": "^3.4.10",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.3",
